# PybindExample

./: CMakeLists.txt
src/PyModule/: algebra.py  geometry.py  to_python.py
src/PyModule/cpp/: ExampleB.cpp  Geometry.cpp  module.cpp
src/app/: from_python.py  main.cpp
src/module/: module.cpp  to_python.py
